# PendingChangesBot-ng

./: .flake8  .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  CI_TEST_STATUS.md  CODEBASE_DOCUMENTATION.md  CODEOWNERS  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  LICENSE  MYPY_IMPROVEMENT_PLAN.md  README.md  TEST_FIXES_SUMMARY.md  pyproject.toml  requirements.txt  swagger.yaml  user-config.py  user-config.py.OAUTH-example
.github/: setup-labels.sh
.github/workflows/: auto-format.yml  ci.yml  labels.yml  security.yml
app/: .coveragerc  manage.py  user-config.py
app/review_statistics/: admin.py  apps.py  models.py  parsers.py  services.py  tests.py  urls.py  views.py
app/review_statistics/management/commands/: compare_statistics_queries.py  load_flaggedrevs_statistics.py  load_statistics.py  refresh_statistics.py
app/review_statistics/migrations/: 0001_initial.py
app/review_statistics/templates/review_statistics/: flaggedrevs_statistics.html
app/review_statistics/tests/: test_flaggedrevs_statistics.py  test_statistics.py
app/reviewer/: asgi.py  settings.py  urls.py  wsgi.py
app/reviewer/utils/: is_living_person.py
app/reviews/: admin.py  autoreview.py  models.py  services.py  urls.py  views.py
app/reviews/autoreview/: __init__.py  base.py  context.py  decision.py  runner.py  test_autoreview.py.orig.txt
app/reviews/autoreview/checks/: __init__.py  article_to_redirect.py  auto_approved_groups.py  blocking_categories.py  bot_user.py  broken_wikicode.py  invalid_isbn.py  manual_unapproval.py  ores_scores.py  reference_only_edit.py  render_errors.py  revert_detection.py  superseded_additions.py  user_block.py
app/reviews/autoreview/utils/: __init__.py  broken_wikicode.py  categories.py  isbn.py  living_person.py  ores.py  redirect.py  render.py  similarity.py  user.py  wikitext.py
app/reviews/management/commands/: configure_checks.py  (+7 more)
app/reviews/migrations/: 0001_initial.py  0002_pendingrevision_superset_data.py  0002_wikiconfiguration_auto_approved_groups.py  0003_pendingpage_categories.py  0004_editorprofile_is_former_bot.py  0004_wikiconfiguration_redirect_aliases.py  0005_wikiconfiguration_redirect_aliases.py  0006_pendingrevision_render_error_count_and_more.py  0007_pendingpage_wikidata_id.py  0008_add_superseded_similarity_threshold.py  0008_wikiconfiguration_ores_damaging_threshold_and_more.py  0009_reviewactivity_flaggedrevsstatistics.py  0009_reviewstatisticsmetadata_reviewstatisticscache.py  0009_wikiconfiguration_ores_damaging_threshold_and_more.py  0010_modelscores.py  0011_add_enabled_checks.py  0011_merge_20251020_1128.py  0012_populate_enabled_checks.py  0012_update_enabled_checks_default.py  0013_merge_20251021_1821.py  0013_populate_enabled_checks.py  0014_add_test_mode_fields.py  0014_merge_20251022_1227.py  0014_reviewstatisticsmetadata_max_log_id.py  0015_add_last_data_loaded_at.py  0015_alter_flaggedrevsstatistics_wiki.py  0016_alter_reviewstatisticsmetadata_last_data_loaded_at.py  0017_merge_20251027_1806.py  0018_alter_reviewactivity_unique_together_and_more.py
app/reviews/models/: __init__.py  editor_profile.py  flaggedrevs_statistics.py  model_scores.py  pending_page.py  pending_revision.py  review_statistics_cache.py  review_statistics_metadata.py  wiki.py  wiki_configuration.py
app/reviews/services/: __init__.py  parsers.py  statistics.py  types.py  user_blocks.py  wiki_client.py
app/reviews/tests/: test_autoreview.py  test_flaggedrevs_statistics.py  test_manual_unapproval.py  test_redirect_bug.py  test_reference_only_edits.py  test_services.py  test_services_parsers.py  test_services_user_blocks.py  test_statistics.py  test_views.py
app/static/css/: main.css
app/static/reviews/: app.js  flaggedrevs_statistics.js
app/templates/: redoc_ui.html  swagger_ui.html
app/templates/reviews/: flaggedrevs_statistics.html  index.html  statistics.html
docs/: AUTHENTICATION.md
scripts/: run-checks.sh
(+12 files in other folders)
