[project]
name = "PendingChangesBot-ng"
description = "A bot to help review pending changes on Wikimedia projects"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

extend-exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "migrations",
    "static"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
]

ignore = [
    "E203",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false
